--- a/src/Controls/LayerControl.xaml
+++ b/src/Controls/LayerControl.xaml
@@ -6,10 +6,23 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:editableObjects="clr-namespace:AutoCadObjectEditor.EditableObjects"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rules="clr-namespace:AutoCadObjectEditor.ValidationRules"
     d:DataContext="{d:DesignInstance Type=editableObjects:EditableLayer}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <rules:LayerNameValidationRule x:Key="LayerNameValidationRule" />
+        <Style TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="Foreground" Value="Red" />
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -27,10 +40,19 @@
             Grid.Column="0"
             Content="Название:" />
         <TextBox
+            x:Name="TextBoxName"
             Grid.Row="0"
             Grid.Column="1"
             IsEnabled="{Binding IsNameEditable}"
-            Text="{Binding Name}" />
+            Validation.Error="TextBoxName_Error">
+            <TextBox.Text>
+                <Binding NotifyOnValidationError="True" Path="Name">
+                    <Binding.ValidationRules>
+                        <StaticResource ResourceKey="LayerNameValidationRule" />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
 
         <Label
             Grid.Row="1"
